# ctrl

./: .gitignore  README.md  main.py  pyproject.toml
ctrl/components/: __init__.py  home_page.py  router.py
ctrl/components/kalman/: kalman_page.py  main_view.py  plot_panel.py  results_panel.py  toolbar_panel.py  tuning_controls_panel.py
ctrl/components/signal_generator/: signal_generator_page.py
ctrl/components/step_response_generator/: step_response_generator_page.py
ctrl/components/step_response_tuning/: step_response_tuning_controls.py  step_response_tuning_page.py  step_response_tuning_plot_panel.py
ctrl/models/: __init__.py
ctrl/models/signal_models/: kalman_run_config_model.py  ramp_hold_profile_model.py  span_selection_model.py  timeseries_model.py  tuning_overrides_model.py  tuning_result_model.py
ctrl/models/step_response_models/: accuator_params_model.py  fopdt_params_model.py  ipdt_params_model.py  selections_model.py  sopdt_params.py  step_id_result_model.py  step_spec_model.py
ctrl/services/: __init__.py  csv_service.py  export_service.py  kalman_service.py  math_helpers.py  signal_generator_service.py  step_identification_service.py  step_response_generator_service.py  tuning_service.py
